--- a/index.html
+++ b/index.html
@@ -1,18 +1,64 @@
 <html>
     <head>
         <title>It's a Vukky!</title>
+        <link rel="preload" as="image" href="/img/petvukky.gif">
         <script src="/index.js"></script>
         <style>
             #vukky {
                 position: fixed;
-                top: 50%;
+                top: 56%;
                 left: 50%;
                 transform: translate(-50%, -50%);
                 cursor: none;
+                z-index: 9999;
+            }
+            #counter {
+                position: fixed;
+                top: 40%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-color: #212529;
+                z-index: -9999;
             }
         </style>
+        <script>
+            // this was cobbled together as a joke!!
+
+            // https://stackoverflow.com/a/48777893
+            let cursor = 0;
+            const KONAMI_CODE = [38, 38, 40, 40, 37, 39, 37, 39, 66, 65];
+            document.addEventListener('keydown', (e) => {
+            cursor = (e.keyCode == KONAMI_CODE[cursor]) ? cursor + 1 : 0;
+            if (cursor == KONAMI_CODE.length) window.cancount = true;
+            });
+
+            window.countercount = 0;
+            function counterLoopback() {
+               if(!window.cancount) return;
+               if(window.counterer) clearTimeout(window.counterer);
+               window.counterer = setTimeout(counterHandler, 1000)
+            }
+            function counterHandler() {
+                if(!window.cancount) return;
+                if(typeof window.countercount == "number") {
+                    window.countercount += 1;
+                    document.querySelector("#counter").innerHTML = `<img src="https://learn.microsoft.com/en-gb/training/azure-devops/shared/media/callout-0${window.countercount}.png" height="256">`;
+                    if(window.countercount == 6) window.countercount = "6";
+                } else {
+                    window.countercount += "6";
+                    document.querySelector("#counter").innerHTML = "";
+                    for (let i = 0; i < window.countercount.length; i++) {
+                        document.querySelector("#counter").innerHTML += `<img src="https://learn.microsoft.com/en-gb/training/azure-devops/shared/media/callout-06.png" height="256"><br>`;
+                    }
+                }
+                counterLoopback()
+            }
+        </script>
     </head>
     <body>
-        <img id="vukky" src="/img/vukkyhappy.png" onmouseover="this.src = '/img/petvukky.gif'" onmouseout="this.src = '/img/vukkyhappy.png'">
+        <div id="counter">
+            <!--<img src="https://learn.microsoft.com/en-gb/training/azure-devops/shared/media/callout-01.png" height="256">-->
+        </div>
+        <img id="vukky" src="/img/vukkyhappy.png" onmouseover="counterHandler();this.src = '/img/petvukky.gif'" onmouseout="clearTimeout(window.counterer);window.countercount = 0;document.querySelector('#counter').innerHTML = '';this.src = '/img/vukkyhappy.png'">
     </body>
 </html>
