--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
             let cursor = 0;
             const KONAMI_CODE = [38, 38, 40, 40, 37, 39, 37, 39, 66, 65];
             document.addEventListener('keydown', (e) => {
-            cursor = (e.keyCode == KONAMI_CODE[cursor]) ? cursor + 1 : 0;
-            if (cursor == KONAMI_CODE.length) window.cancount = true;
+                cursor = (e.keyCode == KONAMI_CODE[cursor]) ? cursor + 1 : 0;
+                if (cursor == KONAMI_CODE.length) {
+                    window.cancount = true;
+                    document.querySelector("#vwrap").style.top = "56%";
+                }
             });
 
             window.countercount = 0;
